<resources>
    <string name="app_name">Passo Certo</string>
    <string name="tit_cadastro_usuario">User Registration</string>
    <string name="tit_cadastro_evento">Event Registration</string>
    <string name="tit_mapa">Basílica"'"s Map</string>
    <string name="tit_sobre">About</string>
    <string name="tit_sair">Logout</string>
    <string name="bkg_principal">Background Principal</string>
    <string name="img_logo">Logo</string>
    <string name="edt_login">Login</string>
    <string name="edt_uf">UF</string>
    <string name="edt_cidade">City</string>
    <string name="edt_nome">Name</string>
    <string name="edt_email">E-mail</string>
    <string name="edt_rep_senha">Repeat Password</string>
    <string name="edt_senha">Password</string>
    <string name="edt_local">Local</string>
    <string name="edt_data">Date</string>
    <string name="edt_hora">Hour</string>
    <string name="edt_ddd">DDD</string>
    <string name="edt_telefone">Phone</string>
    <string name="btn_avancar">Advance</string>
    <string name="btn_ok">ok</string>
    <string name="btn_voltar">←</string>
    <string name="lnk_esqueceu_senha"><u>Lost my password</u></string>
    <string name="lnk_termos_uso"><u>Terms of use</u></string>
    <string name="btn_cadastro">Sign Up</string>
    <string name="lbl_aceite">I accept the<u>terms of use</u></string>
    <string name="lbl_conect">or connect through networks:</string>
    <string name="msg_implementacao_futura">This feature will be "\n" deployed in the future"</string>
    <string name="msg_req_nome">The field Name "\n" is required</string>
    <string name="msg_req_local">The field Local "\n" is required</string>
    <string name="msg_req_data">The field Date "\n" is required</string>
    <string name="msg_req_hora">The field Hour "\n" is required</string>
    <string name="msg_req_ddd">The field Ddd "\n" is required</string>
    <string name="msg_req_telefone">The field Phone "\n" is required</string>
    <string name="msg_req_email">The field E-mail "\n" is required</string>
    <string name="msg_erro_email">The field E-mail "\n" is incorrect</string>
    <string name="msg_erro_login">Login or"\n" Password is incorrect</string>
    <string name="msg_erro_api">Não foi possível conectar "\n" Tente mais tarde"</string>
    <string name="msg_req_login">The field Login "\n" is required</string>
    <string name="msg_req_senha">The field Password "\n" is required</string>
    <string name="msg_req_rep">The field Repeat Password "\n" is required</string>
    <string name="msg_dif_rep">The Repeat Password field is "\n" different from the password field</string>
    <string name="msg_ok_inserido">Usuário inserido "\n" com sucesso!</string>
    <string name="msg_ok_atualizado">Usuário atualizado "\n" com sucesso!</string>
    <string name="msg_ok_excluido">Usuário excluído "\n" com sucesso!</string>
    <string name="msg_ng_inserido">Usuário não pode "\n" ser inserido!</string>
    <string name="msg_ng_atualizado">Usuário não pode "\n" ser atualizado!</string>
    <string name="msg_ng_excluido">Usuário não pode  "\n" ser excluído!"</string>
    <string name="lbl_desenvolvedor">Developed by: Erich Hubner</string>
    <string name="lbl_versao">Version: 1.0</string>
    <string name="title_activity_home">PassoCerto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_maps">Map</string>
    <string name="tit_lista">List of Events</string>
    <string name="ttb_telefone">Phone</string>
    <string name="tit_cadastro">Sign Up</string>
</resources>
