<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCB06"
    tools:context=".CadastroUsuarioActivity">

    <LinearLayout style="@style/Ln">
        <TextView
            android:id="@+id/tit_cadastro_evento"
            style="@style/Tit_tela"
            android:text="@string/tit_cadastro_evento"
            android:contentDescription="@string/tit_cadastro"
            />

        <LinearLayout style="@style/Ln"
            android:paddingBottom="40dp"
            >

            <EditText
                android:id="@+id/edt_nome"
                style="@style/Edt_txt"
                android:hint="@string/edt_nome"
                android:maxLength="35"/>

            <EditText
                android:id="@+id/edt_local"
                style="@style/Edt_txt"
                android:hint="@string/edt_local"
                android:maxLength="35"/>

            <EditText
                android:id="@+id/edt_data"
                style="@style/Edt_txt"
                android:hint="@string/edt_data"
                android:inputType="date"
                android:maxLength="10"/>

            <EditText
                android:id="@+id/edt_hora"
                style="@style/Edt_txt"
                android:hint="@string/edt_hora"
                android:inputType="time"
                android:maxLength="5"/>

            <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  >
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_weight="0.8"
                  >

                  <EditText
                      android:id="@+id/edt_ddd"
                      style="@style/Edt_txt"
                      android:hint="@string/edt_ddd"
                      android:inputType="number"
                      android:maxLength="2"/>

              </LinearLayout>
                  <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_weight="0.2"
                  >

                  <EditText
                      android:id="@+id/edt_telefone"
                      style="@style/Edt_txt"
                      android:hint="@string/edt_telefone"
                      android:maxLength="9"
                      android:inputType="number"/>
              </LinearLayout>
              </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_voltar"
                        style="@style/Btn_red"
                        android:layout_width="65sp"
                        android:text="@string/btn_voltar"
                        android:textSize="35sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    >

                    <Button
                        android:id="@+id/btn_telefonar"
                        android:layout_marginTop="10dp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/ico_ligacao"
                        android:visibility="invisible"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_compartilhar"
                        android:layout_marginTop="10dp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/ico_compartilhar"
                        android:visibility="invisible"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    >

                    <Button
                        android:id="@+id/btn_prosseguir"
                        style="@style/Btn_red"
                        android:text="@string/btn_ok"
                        android:layout_width="65sp"
                        />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>