<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCB06"
    tools:context=".CadastroUsuarioActivity">

    <LinearLayout style="@style/Ln">
        <TextView
            android:id="@+id/tit_cadastro"
            style="@style/Tit_tela"
            android:text="@string/tit_cadastro_usuario"
            android:contentDescription="@string/tit_cadastro_usuario"
            />

        <LinearLayout style="@style/Ln"
            android:paddingBottom="40dp"
            >

            <EditText
                android:id="@+id/edt_add_nome"
                style="@style/Edt_txt"
                android:hint="@string/edt_nome" />

            <EditText
                android:id="@+id/edt_add_email"
                style="@style/Edt_txt"
                android:hint="@string/edt_email" />

            <EditText
                android:id="@+id/edt_add_login"
                style="@style/Edt_txt"
                android:hint="@string/edt_login" />

            <EditText
                android:id="@+id/edt_add_senha"
                style="@style/Edt_pass"
                android:hint="@string/edt_senha" />

              <EditText
                  android:id="@+id/edt_add_rep"
                  style="@style/Edt_pass"
                  android:hint="@string/edt_rep_senha" />

            <!--   <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  >
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_weight="0.8"
                  >

                  <EditText
                      android:id="@+id/edt_uf"
                      style="@style/Edt_txt"
                      android:hint="@string/edt_uf"


              </LinearLayout>
                  <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_weight="0.2"
                  >

                  <EditText
                      android:id="@+id/edt_cidade"
                      style="@style/Edt_txt"
                      android:hint="@string/edt_cidade" />
              </LinearLayout>
              </LinearLayout>
              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  >
              <CheckBox
                  style="@style/Chk"
                  android:layout_marginTop="20dp"/>
              <TextView
                  android:id="@+id/lbl_aceite"
                  style="@style/Lnk"
                  android:text="@string/lbl_aceite"
                  android:layout_marginTop="20dp"
                  />
              </LinearLayout>!-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_voltar"
                        style="@style/Btn_red"
                        android:layout_width="65sp"
                        android:text="@string/btn_voltar"
                        android:textSize="35sp" />
                </LinearLayout>

            <LinearLayout
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right"
                >

                <Button
                    android:id="@+id/btn_prosseguir"
                    style="@style/Btn_red"
                    android:text="@string/btn_ok"
                    android:layout_width="65sp"
                    />

            </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>